--- a/DocumentManagemnetService/DocumentManagementService.csproj
+++ b/DocumentManagemnetService/DocumentManagementService.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MaterialDesignExtensions" Version="3.3.0" />
     <PackageReference Include="MaterialDesignInXamlToolkitAddOns" Version="0.0.63" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="Supabase" Version="1.1.1" />
     <PackageReference Include="Syroot.Windows.IO.KnownFolders" Version="1.3.0" />
   </ItemGroup>
