--- a/DocumentManagemnetService/NLog.config
+++ b/DocumentManagemnetService/NLog.config
@@ -2,26 +2,26 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Info">
+      throwExceptions="false"
+      internalLogLevel="Warn"
+      internalLogFile="internal-nlog.log">
 
+	<!-- Targets: куда писать логи -->
 	<targets>
+		<!-- Запись основных логов -->
+		<target xsi:type="File" name="fileAll"
+				fileName="${basedir}/logs/${shortdate}.log"
+				layout="${longdate}|${level:uppercase=true}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}" />
 
-
-
-		<target name="debugTarget"
-				xsi:type="Debugger"
-				layout="${longdate} | ${level:uppercase=true} | ${message} ${exception:format=tostring}" />
-
-		<targets async="true">
-			<target name="asyncFile" xsi:type="AsyncWrapper">
-				<target name="file" xsi:type="File"
-						fileName="${basedir}/logs/${shortdate}.log"
-						layout="${longdate} | ${level} | ${message} ${exception}" />
-			</target>
-		</targets>
+		<!-- Ошибки -->
+		<target xsi:type="File" name="fileError"
+				fileName="${basedir}/logs/error/${shortdate}.log"
+				layout="${longdate}|${level:uppercase=true}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}" />
 	</targets>
 
+	<!-- Правила логирования -->
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="fileTarget,debugTarget" />
+		<logger name="*" minlevel="Info" writeTo="fileAll" />
+		<logger name="*" minlevel="Error" writeTo="fileError" />
 	</rules>
 </nlog>
